# qa_guru_hw_18

./: README.md  pyproject.toml
