[tool.poetry]
name = "qa-guru-hw-18"
version = "0.1.0"
description = ""
authors = ["flowerfrog <alexosenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
